--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY PERSONAL WEBSITE</title>
+    <h1>I amm now creating a website for me</h1>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
